--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -17,7 +17,7 @@ jobs:
           sed -i "s/over [0-9]\\+ years of experience in creating/over $YEARS years of experience in creating/" README.md
       - name: Commit changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "jepbura@gmail.com"
+          git config --local user.name "jepbura"
           git commit -am "Update years of experience" || echo "No changes to commit"
           git push
